# reaper-video-pipeline

./: .gitignore  README.md
.github/workflows/: release.yml
electron-app/: package-lock.json  package.json  test-electron.js  tsconfig.json  tsconfig.main.json  vite.config.ts
electron-app/scripts/: gen-icon.ps1  gen-icons.js  ping-reaper.js
electron-app/src/: preload.ts
electron-app/src/main/: ffmpeg.ts  index.ts  reaper.ts
electron-app/src/renderer/: App.tsx  index.css  index.html
reaper-extension/: CMakeLists.txt  README.md
reaper-extension/src/: reaper_video_fx_bridge.cpp
reaper-scripts/: video_fx_bridge.lua
reaper-sdk-main/reaper-plugins/reaper_csurf/: reaper_csurf-x64.vcproj  reaper_csurf.vcxproj  reaper_csurf.vcxproj.filters  res.rc
reaper-sdk-main/reaper-plugins/reaper_mp3/: reaper_mp3dec.vcxproj
tauri-app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tauri-app/scripts/: gen-icons.cjs
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: create.sh  icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
